Articles listing page implementation

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -93,7 +93,7 @@ body.mobile-menu-open .back-to-top {
 header {
   width: 100%;
   float: left;
-  position: relative;
+  position: fixed;
   width: 100%;
   top: 0;
   left: 0;
